# apitest

./: .travis.yml  pyproject.toml
apitesting/: api.py
tests/: test_case.py
tests/api/: httpbin.py
